--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 [dependencies]
 borgbackup = "0.9.1"
+chrono = "0.4.39"
+chrono-tz = "0.10.0"
 clap = { version = "4.5.23", features = ["derive"] }
+cron = "0.14.0"
+daemonize = "0.5.0"
+ssh = "0.1.4"
