--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ chrono-tz = "0.10.0"
 clap = { version = "4.5.23", features = ["derive"] }
 cron = "0.14.0"
 daemonize = "0.5.0"
+env_logger = "0.11.6"
+log = "0.4.22"
 ssh = "0.1.4"
