--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 repository = "https://github.com/thomas-phillips/RustyBorg"
 readme = "README.md"
 description = "Tool for simplifying BorgBack"
+exclude = ["docker*", "test.sh"]
 
 [dependencies]
 borgbackup = "0.9.1"
